--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mc-messenger",
   "version": "1.0.0",
   "description": "A Messenger App on Heroku",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,18 @@
     "heroku"
   ],
   "author": "michidelucifer",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.14.0",
+    "connect-mongo": "^3.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "mongoose": "^5.6.10",
+    "multer": "^1.4.2",
+    "socket.io": "^2.2.0"
+  }
 }
